--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/ElitsaDev/RISE-Bootcamp-Homework#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
+    "querystring": "^0.2.1",
     "ws": "^8.12.1"
   },
   "devDependencies": {
